<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="30dp"
        android:text="@string/weightLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/heightEditText"
        android:ems="10"
        android:hint="@string/weightHint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weightEditText"
        android:text="@string/heightLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginStart="37dp"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:hint="@string/heightHint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/computeButton"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/heightEditText"
        android:layout_below="@+id/heightEditText"
        android:layout_marginStart="37dp"
        android:layout_marginTop="24dp"
        android:text="@string/computeButton" />
</RelativeLayout>